# github-activity-monitor

./: .gitignore  README.md  docker-compose.yaml
.github/workflow-templates/: python-code-scan.yml
.github/workflows/: ci.yml  python-code-scan.properties.json  python-code-scan.yml
api/: .dockerignore  .flake8  Dockerfile  README.md  app.py  pyproject.toml
api/src/: database.py  handlers.py  models.py  settings.py
api/tests/: test_api.py
ingestor/: .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
ingestor/src/: ingestion.py  models.py  postgres_functions.py  redis_functions.py  service.py  settings.py  utils.py
ingestor/tests/: conftest.py  test_ingestion.py  test_postgres_functions.py  test_response.json  test_service.py  test_utils.py
