# Ref.: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
[project]
name = "github-activity-monitor-ingestor"
description = "Include description here"
readme = "README.md"
requires-python = "==3.10.*"
maintainers = [
    { name = "Tjian Lam", email = "tjianlam@gmail.com" },
]

# Ref.: https://pypi.org/classifiers/
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "requests==2.31.0",
    "pydantic==1.10.12",
    "redis==4.6.0",
    "sqlalchemy==2.0.19",
    "psycopg2-binary==2.9.6",
    "typer==0.9.0"
]

dynamic = ["version"]

[project.optional-dependencies]
lint = ["flake8", "bandit"]
test = ["pytest", "pytest-cov"]
type_check = ["mypy"]

[project.urls]
homepage = "https://github.com/tjianl/github-activity-monitor"
repository = "https://github.com/tjianl/github-activity-monitor/ingestor"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '^\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 120
indent = "    "

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--junitxml=junit/test-results.xml", "-s"]
testpaths = ["tests"]

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
